# ascent-beta-statistics

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  Main.cpp  Tester.cpp  Tester.h
statistics/: Distribution.cpp  Distribution.h  Exponential.h  Markov.h  Normal.h  Rayleigh.h  StudentT.h  Uniform.h
